<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NOTErra</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_form">Formular</string>
    <string name="title_activity_notes">Notiz</string>
    <string name="title_activity_gps">GPS - Ortung</string>
    <string name="title_activity_summary">Zusammenfassung</string>
    <string name="title_activity_inspection">Begehung</string>

    <!-- Strings des der Activity - Main -->
    <string name="inspectionbutton">InspectionButton</string>
    <string name="begehungstarten">Begehung Starten</string>

    <!-- Strings des der Activity - Inspection -->
    <string name="formbutton">FormButton</string>
    <string name="notebutton">NoteButton</string>
    <string name="gpsbutton">GpsButton</string>
    <string name="finishbutton">FinishButton</string>

    <!-- Strings des der Activity - NOTIZ -->
    <string name="camerabutton">CameraButton</string>
    <string name="recordbutton">RecordButton</string>
    <string name="playbutton">PlayButton</string>
    <string name="stopbutton">StopButton</string>
    <string name="deleteaudiobutton">DeleteAudioButton</string>
    <string name="savebutton">SaveButton</string>
    <string name="deletebutton">DeletButton</string>
    <string name="deleteaudio">DeleteAudio</string>
    <string name="imageview">ImageView</string>
    <string name="notetextfield">Eingabe einer Textnotiz möglich...</string>
    <string name="speicherbuttontext">Speichern</string>
    <string name="notizhinweis">Notiz hier eintragen...</string>
    <string name="chronometer">Chronometer</string>
    <string name="title_activity_gps_handler">GpsHandler</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_holzablagerungen">Holzablagerungen</string>
    <string name="title_activity_holzablagerung">Holzablagerung</string>
    <string name="title_activity_ablagerung">Ablagerung</string>

    <!-- String für Formular -->
    <string name="Beobachtung">-beliebig-</string>
    <string name="speichern">speichern</string>
    <string name="anzahlstam">Anzahl der Stämme:</string>
    <string name="Baumart">Baumart(en)</string>
    <string name="Mediabhd">Media (BHD)</string>
    <string name="bachabschnitt">Länge Bachabschnitt (m)</string>
    <string name="Beschreibung">Beschreibung</string>
    <string name="Beschriftung">Beschreibung..</string>
    <string name="maßnahme">Empfohlene Maßnahme</string>
    <string name="Beliebig">Beliebig</string>
    <string name="h1beobachtung">Bitte wählen Sie eine Beobachtung aus:</string>
    <string name="holzmenge">Holzmenge (fm)</string>
    <string name="kosten">Kosten (Euro geschätzt)</string>

    <!-- String für Inspection -->
    <string name="leer">Es wurde noch keine Beobachtung gewählt</string>


    <!-- Farben -->

    <color name="Hintergrundfarbe">#0b622b</color>
    <color name="tgrau">#CAC9C9</color> <!-- Text / Editor Grau -->
    <color name="bgrau">#6E6E6E</color> <!-- Button Grau -->
    <color name="black">#190707</color>



    <!-- Strings für Haupt-Formular-->
    <string name="gemeinde">Gemeinde</string>
    <string name="kostenschatzung">Kostenschätzung</string>
    <string name="empfMaßn">Empfohlene Maßnhamen</string>
    <string name="prioritat">Priorität</string>
    <string name="forderfahig">Förderfähig</string>
    <string name="abwicklung">Abwicklung</string>
    <string name="defMaßn">Def. Maßnhamen</string>

    <string name="absturzsicherung">Absturzsicherung</string>
    <string name="baumestraucher">Bäume/Sträuche fällen</string>
    <string name="bauwerksan">Bauwerk sanieren</string>
    <string name="bauwerkwar">Bauwerk warten</string>
    <string name="durchlass">Durchlass freilegen</string>
    <string name="genehmigung">Genehmigung prüfen</string>
    <string name="hindernisseentf">Hindernisse entfernen/räumen</string>
    <string name="hindernissp">Hinderniss sprengen</string>
    <string name="holzablang">Holz ablängen</string>
    <string name="keineMaßn">Keine Maßnahmen</string>
    <string name="sperreodgerinne">Sperre oder Gerinne räumen</string>
    <string name="ufersich">Ufer sichern</string>
    <string name="zustandbeob">Zustand beobachten</string>

    <!-- Strings Formular -> Beobachtung: Holzablagerung -->
    <string name="ablagerung">Ablagerungsart</string>
    <string name="Bau">Bauaushub</string>
    <string name="felsblock">Felsblöcke</string>
    <string name="mull">Müllablagerung</string>
    <string name="schotter">Schotter, Sand</string>

    <!-- String Formular -> Beobachtung:Ablagerung sonst. abflusshemmender Gegenstände -->

    <string name="großaus">Größe / Ausmaß (m2)</string>
    <string name="lange_bachabschnitt">Länge Bachabschnitt (m)</string>
    <string name="title_activity_holzbewuchs">Holzbewuchs</string>
    <string name="title_activity_schaeden__regulierungsbauten">Schäden Regulierungsbauten</string>

    <!-- Strings Formular -> Beobachtung: Holzbewuchs -->
    <string name="baumhoehe">Baumhöhe (m)</string>

    <!-- Strings Formular -> Schäden an regulierungsbauten -->
    <!-- Radio Buttons -->
    <string name="geschiebesperre">Geschiebesperre</string>
    <string name="laengsverbauung">Längsverbauung</string>
    <string name="querwerk">Querwerk</string>

    <!-- Überschriften & hint texte -->
    <string name="bauwerk">Art des Bauwerks:</string>
    <string name="schandsart">Schadensart des Bauwerkes:</string>
    <string name="freiehoehedammkrone"> Freie Höhe bis Dammkrone (m)</string>

    <!-- Checkboxes -->
    <string name="fehlendeabsturz">Fehl. Absturzsich.</string>
    <string name="Ausg">Ausg. Sperrenflügel</string>
    <!-- Geschiebesperre oben schon deklariert -->
    <string name="mauerwerk">Risse im Mauerwerk/Beton</string>
    <string name="schadhaftes">Schadhaftes Mauerwerk/Beton</string>
    <string name="sonst">Sonstiges</string>
    <string name="starkerbewuchs">Starker Bewuchs</string>
    <string name="untersp">Untersp. Fundanment</string>
    <string name="title_activity_ablufssbehinderndeeinbauten">Abflussbehindernde Einbauten</string>

    <!-- Abflussbehindernde Einbauten -->
    <string name="einbauten">Art der Einbauten</string>
    <string name="bruckesteg">Brücke, Steg</string>
    <string name="huette">Hütte</string>
    <string name="staubrett">Staubrett</string>
    <string name="rohrdurchlass">Verlegter Rohrdurchlass</string>
    <string name="title_activity_wasserauseinleitung">Wasseraus- und -einleitung</string>

    <!-- String für Wasseraus und -einleitung -->
    <string name="zweck">Zweck</string>
    <string name="abwasser">Abwasser</string>
    <string name="beschneiung">Beschneiung</string>
    <string name="bewaesserung">Bewässerung</string>
    <string name="trinkwasser">Trinkwasser</string>
    <string name="title_activity_abflussbehinderung">Abflussbehinderung</string>

    <!-- Strings für Ereignis ohne unmittelbare Abflussbehinderung -->
    <string name="beobachtung">Art der Beobachtung</string>
    <string name="felssturz">Felssturz</string>
    <string name="hochwasser">Hochwasser</string>
    <string name="lawinenablagerung">Lawinenablagerung</string>
    <string name="mure">Mure</string>
    <string name="rutschung">Rutschung</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_startup">startup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nothing">     </string>

</resources>
