
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context="at.itkolleg.android.noterra.Holzablagerungen"
              android:background="@color/Hintergrundfarbe" android:focusableInTouchMode="true">



    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:focusableInTouchMode="true">
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bauwerk"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/black" android:textSize="20dp"/>
            <RadioGroup android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:id="@+id/schaeden" android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">


                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/testtop"

                        android:text="@string/geschiebesperre"
                        android:id="@+id/geschiebesperre"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"

                        android:text="@string/laengsverbauung"
                        android:id="@+id/laengsverbauung"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"

                        android:text="@string/querwerk"
                        android:id="@+id/querwerk"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/testbot"

                        android:text=""
                        android:id="@+id/freiwahl"
                        android:bottomLeftRadius="8dip"
                        android:onClick="onclick"/>
            </RadioGroup>
            <EditText
                    android:layout_width="120dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="35dp"
                    android:id="@+id/artdesBauwerks_edittext"
                    android:layout_marginTop="-35dp"
                    android:singleLine="true"
                    android:background="@drawable/apptheme_textfield_default_holo_light"
                    android:maxLength="20"

                    android:hint="Sonstiges"
                    />


            
           <TextView
                   android:layout_marginTop="20dp"
                   android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schandsart"
            android:id="@+id/h2Schadensart"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black" android:textSize="20dp"/>

            <CheckBox  android:layout_marginTop="5dp"
                       android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/testtop"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/fehlendeabsturz"
                      android:id="@+id/fehlabsturz"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#F6E398"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/Ausg"
                      android:id="@+id/ausgsperrenfluegel"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#F6E398"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/geschiebesperre"
                      android:id="@+id/geschiebesperre2"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#F6E398"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/mauerwerk"
                      android:id="@+id/rissemauerwerk"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#F6E398"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/schadhaftes"
                      android:id="@+id/schadhaftesmauerwerk"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#F6E398"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/sonst"
                      android:id="@+id/sonst"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#F6E398"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/starkerbewuchs"
                      android:id="@+id/starkerbewuchs"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>

            <CheckBox android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/testbot"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"

                      android:text="@string/untersp"
                      android:id="@+id/Untersp_fundanment"
                      android:bottomLeftRadius="8dip"
                      android:onClick="onclick1"/>




            <EditText
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/freiehoehedammkrone"

                    android:hint="@string/freiehoehedammkrone"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"

                    />

            <Button
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Speichern"
                    android:id="@+id/speichern" android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_style"
                    android:onClick="save"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>