<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context="at.itkolleg.android.noterra.Holzablagerungen"
              android:background="@color/Hintergrundfarbe" android:focusableInTouchMode="true">



    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:focusableInTouchMode="true">
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beobachtung"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/black" android:textSize="20dp"/>

            <RadioGroup android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/art_beobachtung" android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" android:layout_marginTop="5dp">


                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/testtop"


                        android:text="@string/felssturz"
                        android:id="@+id/felssturz"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"

                        android:text="@string/hochwasser"
                        android:id="@+id/hochwasser"
                        android:onClick="onclick"/>

                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"


                        android:text="@string/lawinenablagerung"
                        android:id="@+id/lawinenablagerung"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"


                        android:text="@string/mure"
                        android:id="@+id/mure"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"


                        android:text="@string/rutschung"
                        android:id="@+id/rutschung"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6E398"


                        android:text="@string/sonst"
                        android:id="@+id/sonst"
                        android:onClick="onclick"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/testbot"


                        android:text=""
                        android:id="@+id/freiwahl"
                        android:bottomLeftRadius="8dip"
                        android:onClick="onclick"/>
            </RadioGroup>
            <EditText
                    android:layout_width="120dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="35dp"
                    android:id="@+id/art_der_abflussbehinderung"
                    android:layout_marginTop="-35dp"
                    android:singleLine="true"
                    android:background="@drawable/apptheme_textfield_default_holo_light"

                    android:maxLength="20"
                    android:hint="Sonstiges"/>


            <EditText
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"

                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textfield_style"
                    android:id="@+id/Beschreibung"
                    android:hint="@string/Beschreibung"
                    android:gravity="top|start"
                    android:maxLines="10"

                    android:inputType="textMultiLine"

                    />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Speichern"
                    android:id="@+id/speichern" android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_style"
                    android:onClick="save"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>