
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context="at.itkolleg.android.noterra.Holzablagerungen"
              android:background="@color/hellgrun" android:focusableInTouchMode="true">



    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:focusableInTouchMode="true" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ablagerung: "
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/black" android:textSize="20dp"/>

<RadioGroup android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ablagerung">
            <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/Bau"
                    android:id="@+id/Bauaushub"
                    android:topLeftRadius="8dip"
                    android:background="@drawable/testtop"
                    android:onClick="onclick"/>
            <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/felsblock"
                    android:id="@+id/fesblock"
                    android:background="@color/tgrau"
                    android:onClick="onclick"/>
            <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tgrau"

                    android:text="@string/mull"
                    android:id="@+id/mull"
                    android:onClick="onclick"/>
            <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tgrau"

                    android:text="@string/schotter"
                    android:id="@+id/schotter"
                    android:onClick="onclick"/>
    <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/testbot"

                    android:text=""
                    android:id="@+id/freiwahl"
                    android:bottomLeftRadius="8dip"
                    android:onClick="onclick"/>


</RadioGroup>
            <EditText
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:id="@+id/editText"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="-30dp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:background="@drawable/button_style"
                    android:onClick="editclick"


                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textfield_style"
                    android:id="@+id/Beschreibung"
                    android:hint="@string/Beschreibung"
                    android:inputType="textMultiLine"

                    android:gravity="top|start"
                    android:maxLines="10"
                    android:imeOptions="actionDone"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/Großausmaß"
                    android:hint="@string/großaus"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/laenge_bachabschnitt"
                    android:hint="@string/lange_bachabschnitt"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textfield_style"
                    android:id="@+id/maßnahmen"
                    android:hint="@string/maßnahme"
                    android:inputType="textMultiLine"

                    android:gravity="top|start"
                    android:maxLines="10"
                    android:imeOptions="actionDone"
                    />




            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/Kosten"
                    android:hint="@string/kosten"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    />


            <Button
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Speichern"
                    android:id="@+id/speichern" android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_style"
                    android:onClick="save"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>