
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context="at.itkolleg.android.noterra.Holzablagerungen"
              android:background="@color/hellgrun">



    <ScrollView android:layout_width="fill_parent" android:layout_height="500dp">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" >

            <Spinner android:id="@+id/Spinner01"
                     android:layout_width="360dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/spinner_style"
                     android:prompt="@string/Beliebig"
                    />

            <Spinner android:id="@+id/Spinner02"
                     android:layout_width="360dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/spinner_style"

                     android:prompt="@string/Beliebig"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/baumhoehe"
                    android:hint="@string/baumhoehe"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    />
            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/holzbewuchs_laenge_bachabschnitt"
                    android:hint="@string/lange_bachabschnitt"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textfield_style"
                    android:id="@+id/Beschreibung"
                    android:hint="@string/Beschreibung"
                    android:inputType="textMultiLine"

                    android:gravity="top|start"
                    android:maxLines="10"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/laenge_bachabschnitt"
                    android:hint="@string/lange_bachabschnitt"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    />

            <EditText
                    android:layout_width="360dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textfield_style"
                    android:id="@+id/maßnahmen"
                    android:hint="@string/maßnahme"
                    android:inputType="textMultiLine"

                    android:gravity="top|start"
                    android:maxLines="10"
                    />




            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/Kosten"
                    android:hint="@string/kosten"
                    android:background="@drawable/textfield_style"
                    android:inputType="number"
                    />


            <Button
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Speichern"
                    android:id="@+id/speichern" android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_style"
                    android:onClick="save"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>